# Prediction-Service

./: .gitignore  Dockerfile  README.md  api.py  azure.md  base.db  bdd.py  docker-compose.yaml  extraction.py  import_categories.py  insert_data.py  insert_fake_clients.py  pyproject.toml  requirements.txt
api/: main.py
app/: main.py
classification/: nouveaux_tickets_predits.onnx
data/: categories.json  donnees.json  produits_nettoyes.csv  produits_openfoodfacts_brut.csv  produits_tickets.csv  tickets_categorie_final.csv  tickets_nettoye.csv  tickets_pv.csv  tickets_pv_clean.csv
data/Open_food_fact/: all_slugs.txt  mapping.json  produits_openfoodfacts.csv  tickets_categorie_final.csv
data/prediction/: nouveaux_tickets_predits.csv
data/ticket_supermarche/: brouillon.txt  tickets.csv
modeles/: logreg_model.joblib  vectorizer.joblib
modeles_onnx/: lr_model.onnx  tfidf_params.json
src/: eda.ipynb  insert_predictions.py  modelisation.py  predict_ticket_categories.py
src2/: data_cleaner.py  data_collector.py  export_slugs.py  mapping.py  mlops_pipeline.py  modelisation.py  nettoyage.py  predict_ticket_categories.py  sql_queries.py
