[project]
name = "Prediction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Louis903995", email = "louis@moises.fr"},
]
dependencies = ["pandas>=2.3.1", "scikit-learn>=1.7.1", "numpy>=2.3.2", "matplotlib>=3.10.5", "seaborn>=0.13.2", "joblib>=1.5.1", "pydantic>=2.11.7", "uvicorn>=0.35.0", "fastapi[standard]>=0.116.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
export_requirements = "pdm export -o requirements.txt --without-hashes"
build_docker_image = "bash -c 'VERSION=$(grep -oP \"version = \\\"\\K[^\\\"]+\" pyproject.toml); docker build -t prediction-service:$VERSION -t prediction-service:latest .'"
build_docker = { composite = ["export_requirements", "build_docker_image"] }
container = "docker run -d --name prediction-service -p 80:80 prediction-service:latest"
fastapi = "uvicorn app.main:app --reload"
